<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/settings_service_url" />

        <EditText
            android:id="@+id/settings_service_url"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textUri" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/settings_user" />

        <EditText
            android:id="@+id/settings_user"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/settings_password" />

        <EditText
            android:id="@+id/settings_password"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textPassword" />
    </LinearLayout>

    <TextView
        android:id="@+id/settings_msg"
        android:layout_marginTop="30dp"
        android:paddingLeft="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/settings_save"
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_save" />

</LinearLayout>